Worked on rehabilitation screen

--- a/resources/angular-views/profile/view.html
+++ b/resources/angular-views/profile/view.html
@@ -119,6 +119,45 @@
                         </div>
                     </div>
 
+                    <!-- DEMO -->
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-6">
+
+                            <!-- Hand size -->
+                            <div class="row ui-editable-field ui-editable-field-vertical">
+                                <div class="col-xs-12">
+                                    <div class="ui-editable-field-value">
+                                        <a href="javascript:;" class="edit-text">
+                                            9.6"
+                                        </a>
+                                        <a href="javascript:;" class="edit-icon fa fa-pencil"></a>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 ui-editable-field-label">
+                                    Hand Size
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-xs-12 col-sm-6">
+
+                            <!-- Arm length -->
+                            <div class="row ui-editable-field ui-editable-field-vertical">
+                                <div class="col-xs-12">
+                                    <div class="ui-editable-field-value">
+                                        <a href="javascript:;" class="edit-text">
+                                            33"
+                                        </a>
+                                        <a href="javascript:;" class="edit-icon fa fa-pencil"></a>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 ui-editable-field-label">
+                                    Arm Length
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="row">
 
                         <!-- Date of Birth -->
@@ -140,7 +179,8 @@
                         </div>
                     </div>
 
-                    <div class="row">
+                    <!-- REMOVED FOR DEMO -->
+                    <div ng-show="false" class="row">
 
                         <!-- Phone -->
                         <div class="col-xs-12 col-sm-6">
@@ -182,7 +222,8 @@
                     </div>
 
                     <!-- Profile creation date -->
-                    <div class="row">
+                    <!-- REMOVED FOR DEMO -->
+                    <div ng-show="false" class="row">
                         <div class="col-xs-12">
                             <ui-editable-field
                                 data-label="Profile Created"
@@ -190,6 +231,44 @@
                                 data-type="datetime"
                                 data-disabled="true">
                             </ui-editable-field>
+                        </div>
+                    </div>
+
+                    <!-- DEMO -->
+                    <div class="row">
+
+                        <!-- Experience -->
+                        <div class="col-xs-12 col-md-6">
+                            <div class="row ui-editable-field ui-editable-field-vertical">
+                                <div class="col-xs-12">
+                                    <div class="ui-editable-field-value">
+                                        <a href="javascript:;" class="edit-text">
+                                            16th Season
+                                        </a>
+                                        <a href="javascript:;" class="edit-icon fa fa-pencil"></a>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 ui-editable-field-label">
+                                    Experience
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Snap count -->
+                        <div class="col-xs-12 col-md-6">
+                            <div class="row ui-editable-field ui-editable-field-vertical">
+                                <div class="col-xs-12">
+                                    <div class="ui-editable-field-value">
+                                        <a href="javascript:;" class="edit-text">
+                                            992
+                                        </a>
+                                        <a href="javascript:;" class="edit-icon fa fa-pencil"></a>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 ui-editable-field-label">
+                                    Snap Count
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </ui-editable-fields>
