--- a/resources/angular-views/demo/trends/index.html
+++ b/resources/angular-views/demo/trends/index.html
@@ -12,8 +12,8 @@
     <!-- Bar chart -->
     <div class="row demo-trends-section">
         <div class="col-xs-12 col-md-7 col-md-offset-5 col-lg-9 col-lg-offset-3">
-            <h3 class="text-center">
-                Peak Elbow Angular Velocity / Dec 19 - Feb 6 2016
+            <h3 ng-show="metric" class="text-center">
+                {{ metric.title }} / Dec 19 - Feb 6 2016
             </h3>
         </div>
 
@@ -49,13 +49,25 @@
                     <b>
                         {{ global.getSelectedGroup().name }}
                     </b>
+                    <br>
+
+                    <!-- Metric -->
+                    <div ng-show="metric">
+                        <selectize
+                            ng-model="selectizeMetricModel"
+                            class="form-control text-center"
+                            config="selectizeMetricConfig"
+                            options="selectizeMetricOptions"
+                            placeholder="Select a metric.">
+                        </selectize>
+                    </div>
                 </div>
             </div>
             <br>
             <br>
 
             <!-- Recovery percent -->
-            <div class="row text-center">
+            <div ng-show="metric && !isFetchingData" class="row text-center">
                 <h3>
                     Percent Recovery
                 </h3>
@@ -68,7 +80,7 @@
             <br>
 
             <!-- Threshold input -->
-            <div class="row">
+            <div ng-show="metric && !isFetchingData" class="row">
                 <h3 class="text-center">
                     Threshold for Return To Play
                 </h3>
@@ -97,14 +109,39 @@
             </div>
         </div>
 
-        <div class="col-xs-12 col-md-7 col-lg-9">
+        <!-- Peak Elbow Angular Velocity -->
+        <div ng-show="metric && !isFetchingData" class="col-xs-12 col-md-7 col-lg-9">
             <div
                 data-theme-flot-chart
                 data-data="flotData"
-                data-threshold="thresholdValue"
                 data-options="flotOptions"
+                data-plot-hover="flotPlotHover"
+                data-threshold="thresholdValue"
+                data-threshold-label="'Return To Play'"
                 style="width: 100%; height: 600px;">
             </div>
+        </div>
+
+        <!-- Select metric -->
+        <div ng-show="!metric && !isFetchingData" class="col-xs-12 col-md-7 col-lg-9 text-center">
+            Select a metric to get started.
+            <br>
+            <br>
+
+            <div class="col-md-4 col-md-offset-4">
+                <selectize
+                    ng-model="selectizeMetricModel"
+                    class="form-control text-center"
+                    config="selectizeMetricConfig"
+                    options="selectizeMetricOptions"
+                    placeholder="Select a metric.">
+                </selectize>
+            </div>
+        </div>
+
+        <!-- Loading data -->
+        <div ng-show="isFetchingData" class="col-xs-12 col-md-7 col-lg-9 text-center">
+            <i class="fa fa-spinner fa-spin fa-3x" style="display: block; margin: 100px 0 0"></i>
         </div>
     </div>
 </div>
