Added demo data

--- a/resources/angular-views/demo/trends/index.html
+++ b/resources/angular-views/demo/trends/index.html
@@ -88,6 +88,7 @@
                 class="row text-center"
                 style="color: #ddd;">
 
+                <br>
                 <h3>
                     Percent Recovery
                 </h3>
@@ -103,12 +104,13 @@
                 ng-show="metric.title == 'Peak Elbow Angular Velocity' && !isFetchingData"
                 class="row">
 
+                <br>
                 <h3 class="text-center" style="color: #ddd;">
                     Threshold for Return To Play
                 </h3>
                 <br>
 
-                <div class="col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
+                <div class="col-md-12 col-lg-8 col-lg-offset-2">
                     <div class="input-group">
 
                         <!-- Decrease -->
