--- a/resources/angular-views/profile/view.html
+++ b/resources/angular-views/profile/view.html
@@ -41,8 +41,9 @@
                 <!-- Profile shortcuts -->
                 <div class="profile-shortcuts">
 
+                    <!-- DEMO -->
                     <span style="line-height: 60px; font-size: 1.2em;">
-                        Quarterback
+                        Position: Quarterback
                     </span>
 
                     <div class="pull-right">
@@ -313,7 +314,7 @@
                         data-save-callback="saveProfileDetailsCallback">
                     </ui-editable-standalone-field> -->
 
-                    <!-- Demo -->
+                    <!-- DEMO -->
                     <div class="ui-editable-list-container">
                         <h3 class="title">
                             Previous Injuries
@@ -321,7 +322,9 @@
                         </h3>
                         <br>
 
-                        Rotator cuff tear (Dec 14, 2015)
+                        Rotator cuff tear on Dec 10, 2015
+                        <br>
+                        (surgery Dec 14, 2015).
                         <br>
 
                         <a href="#/demo/trends" style="display: inline-block; margin: 10px 0 0 5px;">
