--- a/resources/angular-views/screenings/index.html
+++ b/resources/angular-views/screenings/index.html
@@ -58,7 +58,7 @@
         </table>
 
         <!-- No screenings to show -->
-        <div ng-show="global.state.screening.list.length === 0">
+        <div ng-show="global.state.screening.list.length === 0" class="text-center">
 
             <a href="#/screenings/current" class="btn btn-primary btn-circle btn-lg">
                 <i class="fa fa-plus"></i>
