--- a/resources/angular-views/demo/trends/index.html
+++ b/resources/angular-views/demo/trends/index.html
@@ -149,7 +149,6 @@
                 class="row">
 
                 <br>
-                <br>
                 <div class="col-md-8 col-md-offset-2 text-center">
                     <canvas
                         data-theme-gauge-chart
@@ -190,14 +189,20 @@
             class="col-xs-12 col-md-7 col-lg-9">
 
             <div class="row" style="margin-top: 15px;">
-                <div class="col-md-4 text-right">
-                    <div class="demo-legend-color" ng-style="{'background-color': colors.extRot}"></div> External Rot.
+                <div class="col-md-2 col-md-offset-3 text-center">
+                    <div class="demo-legend-color" ng-style="{'background-color': colors.extRot}"></div>
+                    External Rot. <br>
+                    <span class="text-muted" style="display: inline-block; margin-top: 5px">100% = 90&deg;</span>
                 </div>
-                <div class="col-md-4 text-center">
-                    <div class="demo-legend-color" ng-style="{'background-color': colors.flexion}"></div> Flexion
+                <div class="col-md-2 text-center">
+                    <div class="demo-legend-color" ng-style="{'background-color': colors.flexion}"></div>
+                    Flexion <br>
+                    <span class="text-muted" style="display: inline-block; margin-top: 5px">100% = 175&deg;</span>
                 </div>
-                <div class="col-md-4 text-left">
-                    <div class="demo-legend-color" ng-style="{'background-color': colors.abduction}"></div> Abduction
+                <div class="col-md-2 text-center">
+                    <div class="demo-legend-color" ng-style="{'background-color': colors.abduction}"></div>
+                    Abduction <br>
+                    <span class="text-muted" style="display: inline-block; margin-top: 5px">100% = 180&deg;</span>
                 </div>
             </div>
 
@@ -211,14 +216,20 @@
             </div>
 
             <div class="row" style="margin-top: 15px;">
-                <div class="col-md-4 text-right">
-                    <div class="demo-legend-color" ng-style="{'background-color': colors.intRot}"></div> Internal Rot.
+                <div class="col-md-2 col-md-offset-3 text-center">
+                    <div class="demo-legend-color" ng-style="{'background-color': colors.intRot}"></div>
+                    Internal Rot. <br>
+                    <span class="text-muted" style="display: inline-block; margin-top: 5px">100% = -80&deg;</span>
                 </div>
-                <div class="col-md-4 text-center">
-                    <div class="demo-legend-color" ng-style="{'background-color': colors.extension}"></div> Extension
+                <div class="col-md-2 text-center">
+                    <div class="demo-legend-color" ng-style="{'background-color': colors.extension}"></div>
+                    Extension <br>
+                    <span class="text-muted" style="display: inline-block; margin-top: 5px">100% = -60&deg;</span>
                 </div>
-                <div class="col-md-4 text-left">
-                    <div class="demo-legend-color" ng-style="{'background-color': colors.adduction}"></div> Adduction
+                <div class="col-md-2 text-center">
+                    <div class="demo-legend-color" ng-style="{'background-color': colors.adduction}"></div>
+                    Adduction <br>
+                    <span class="text-muted" style="display: inline-block; margin-top: 5px">100% = -40&deg;</span>
                 </div>
             </div>
         </div>
@@ -230,14 +241,20 @@
             class="col-xs-12 col-md-7 col-lg-9">
 
             <div class="row" style="margin-top: 15px;">
-                <div class="col-md-4 text-right">
-                    <div class="demo-legend-color" ng-style="{'background-color': colors.extRot}"></div> External Rot.
+                <div class="col-md-2 col-md-offset-3 text-center">
+                    <div class="demo-legend-color" ng-style="{'background-color': colors.extRot}"></div>
+                    External Rot. <br>
+                    <span class="text-muted" style="display: inline-block; margin-top: 5px">100% = 90&deg;</span>
                 </div>
-                <div class="col-md-4 text-center">
-                    <div class="demo-legend-color" ng-style="{'background-color': colors.flexion}"></div> Flexion
+                <div class="col-md-2 text-center">
+                    <div class="demo-legend-color" ng-style="{'background-color': colors.flexion}"></div>
+                    Flexion <br>
+                    <span class="text-muted" style="display: inline-block; margin-top: 5px">100% = 175&deg;</span>
                 </div>
-                <div class="col-md-4 text-left">
-                    <div class="demo-legend-color" ng-style="{'background-color': colors.abduction}"></div> Abduction
+                <div class="col-md-2 text-center">
+                    <div class="demo-legend-color" ng-style="{'background-color': colors.abduction}"></div>
+                    Abduction <br>
+                    <span class="text-muted" style="display: inline-block; margin-top: 5px">100% = 180&deg;</span>
                 </div>
             </div>
 
@@ -250,15 +267,21 @@
                 style="width: 100%; height: 450px;">
             </div>
 
-            <div class="row" style="margin-top: 15px">
-                <div class="col-md-4 text-right">
-                    <div class="demo-legend-color" ng-style="{'background-color': colors.intRot}"></div> Internal Rot.
+            <div class="row" style="margin-top: 15px;">
+                <div class="col-md-2 col-md-offset-3 text-center">
+                    <div class="demo-legend-color" ng-style="{'background-color': colors.intRot}"></div>
+                    Internal Rot. <br>
+                    <span class="text-muted" style="display: inline-block; margin-top: 5px">100% = -80&deg;</span>
                 </div>
-                <div class="col-md-4 text-center">
-                    <div class="demo-legend-color" ng-style="{'background-color': colors.extension}"></div> Extension
+                <div class="col-md-2 text-center">
+                    <div class="demo-legend-color" ng-style="{'background-color': colors.extension}"></div>
+                    Extension <br>
+                    <span class="text-muted" style="display: inline-block; margin-top: 5px">100% = -60&deg;</span>
                 </div>
-                <div class="col-md-4 text-left">
-                    <div class="demo-legend-color" ng-style="{'background-color': colors.adduction}"></div> Adduction
+                <div class="col-md-2 text-center">
+                    <div class="demo-legend-color" ng-style="{'background-color': colors.adduction}"></div>
+                    Adduction <br>
+                    <span class="text-muted" style="display: inline-block; margin-top: 5px">100% = -40&deg;</span>
                 </div>
             </div>
         </div>
