--- a/resources/angular-views/group/list.html
+++ b/resources/angular-views/group/list.html
@@ -17,7 +17,7 @@
                 data-toggle="modal"
                 data-target="#newGroupForm"
                 href="javascript:;"
-                class="btn btn-primary btn-metro">
+                class="btn btn-info btn-metro">
 
                 <i class="fa fa-plus"></i>
             </a>
@@ -69,10 +69,10 @@
                 ng-repeat="group in global.state.group.list"
                 ng-show="group.id"
                 href="#/group/{{ group.id }}"
-                class="btn btn-default btn-metro"
-                style="background-image: url({{ group.avatarSrc || '' }});">
+                class="btn btn-info btn-metro"
+                style="background-image: url({{ group.avatarSrc || '' }})">
 
-                <span>{{ group.name | characters:15 }}</span>
+                <span style="background-color: rgba(0, 0, 0, 0.4)">{{ group.name | characters:15 }}</span>
             </a>
         </div>
     </div>
