--- a/resources/angular-views/group/view.html
+++ b/resources/angular-views/group/view.html
@@ -1,7 +1,7 @@
 
 <!-- Copyright Heddoko(TM) 2015, all rights reserved. -->
 
-<div ng-show="group.id" class="page profile-page">
+<div ng-if="group.id" class="page profile-page">
     <header>
         <h1>
             {{ group.name }} <i class="fa fa-users"></i>
@@ -197,19 +197,19 @@
             </a>
 
             <a
-                ng-repeat="profile in global.data.filteredProfiles"
+                ng-repeat="profile in global.data.filteredProfiles | limitTo:global.data.filteredProfiles.length track by profile.id"
                 href="#/profile/{{ profile.id }}"
                 class="btn btn-info btn-metro"
-                style="background-image: url({{ profile.avatarSrc || '' }});">
+                style="background-image: url({{ ::profile.avatarSrc || '' }});">
 
-                <span style="background-color: rgba(0, 0, 0, 0.4)">{{ profile.lastName.toUpperCase() }}</span>
+                <span style="background-color: rgba(0, 0, 0, 0.4)">{{ ::profile.lastName.toUpperCase() }}</span>
             </a>
         </div>
     </div>
 </div>
 
 <!-- No group selected -->
-<div ng-show="group.id === 0" class="page">
+<div ng-if="group.id === 0" class="page">
     <h1 class="text-center">No group selected</h1>
     <br>
 
