Reworked organize screen + added favicons

--- a/resources/angular-views/import/index.html
+++ b/resources/angular-views/import/index.html
@@ -34,7 +34,7 @@
                     ngf-select="startImport($files)"
                     ngf-drop="startImport($files)"
                     accept=".csv,.txt"
-                    ngf-max-size="2MB"
+                    ngf-max-size="1GB"
                     multiple
                     class="btn btn-primary btn-circle btn-lg">
 
